Update Dockerfile for Cloudburst and JDK 16