@@ -2,27 +2,19 @@
 # See https://docs.docker.com/engine/userguide/eng-image/multistage-build/
 # Requires Docker v17.05
 
-# Use OpenJDK JDK image for intermiediate build
-FROM openjdk:8-jdk-slim AS build
-
-# Install packages required for build
-RUN apt update && apt install -y \
-        build-essential \
-        git \
-        maven
+# Use maven java 16 image for intermiediate build
+FROM maven:3-openjdk-16-slim AS build
 
 # Build from source and create artifact
 WORKDIR /src
 COPY ./ /src
-RUN git submodule update --init
 RUN mvn clean package
 
 # Use OpenJDK JRE image for runtime
-FROM openjdk:8-jre-slim AS run
-LABEL maintainer="Micheal Waltz <dockerfiles@ecliptik.com>"
+FROM openjdk:16-jdk-slim AS run
 
 # Copy artifact from build image
-COPY --from=build /src/target/nukkit-1.0-SNAPSHOT.jar /app/nukkit.jar
+COPY --from=build /src/target/Cloudburst.jar /app/Cloudburst.jar
 
 # Create minecraft user
 RUN useradd --user-group \
@@ -48,4 +40,4 @@ WORKDIR /data
 
 # Run app
 ENTRYPOINT ["java"]
-CMD [ "-jar", "/app/nukkit.jar" ]
+CMD [ "-jar", "--enable-preview", "/app/Cloudburst.jar" ]
